Fix white space

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,6 +5,15 @@ html {
   font-size: 16px;
 }
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
 .main-content {
   position: relative;
   top: 5.3125rem; /* To offset for fixed header. */
